--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- 상단 제목 -->
   <header>
-    <h1>💰 재벌 키우기 웹게임 💰</h1>
+    <h1>💰 재벌 키우기 💰</h1>
   </header>
   
   <!-- 탭 메뉴 -->
@@ -19,6 +19,11 @@
     <button onclick="openTab('stock')">📈 주식 투자</button>
     <button onclick="openTab('stats')">📊 통계</button>
   </nav>
+<div id="topStatusBar">
+  💰 자산: <span id="money">0</span> 원
+  &nbsp;&nbsp;&nbsp;
+  🎟 토큰: <span id="tokenDisplay">0</span>
+</div>
 
 
   <!-- 메인 탭 영역 -->
@@ -26,7 +31,6 @@
   <!-- 1. 돈벌기 -->
   <section id="clicker" class="tab-content">
     <h2>💵 클릭해서 돈 벌기</h2>
-    <p>현재 자산: <span id="money">0</span> 원</p>
     <button id="clickBtn" class="main-btn">💸 클릭해서 돈 벌기</button>
     <p>현재 등급: <span id="rankDisplay">신입 창업가</span></p>
     <div id="logBox" class="log-box"></div>
@@ -85,17 +89,17 @@
         <div class="shop-container">
 
         <div class="shop-item">
-            <h3>🧠 경제 마스터</h3>
-            <p>자동 수익 × 2</p>
+            <h3>🧠 자동수익 1.5배</h3>
+            <p>효과 레벨: <span id="level_master">0</span></p>
             <p>비용: <span id="tokenCost_master">20</span> 토큰</p>
-            <button onclick="buyTokenUpgrade('master')">구매</button>
+            <button id="btnMasterUpgrade" onclick="buyTokenUpgrade('master')">구매</button>
         </div>
 
         <div class="shop-item">
-            <h3>⚡ 클릭 부스터</h3>
-            <p>클릭 수익 × 3</p>
+            <h3>⚡ 클릭 2배</h3>
+            <p>효과 레벨: <span id="level_booster">0</span></p>
             <p>비용: <span id="tokenCost_booster">15</span> 토큰</p>
-            <button onclick="buyTokenUpgrade('booster')">구매</button>
+            <button id="btnBoosterUpgrade" onclick="buyTokenUpgrade('booster')">구매</button>
         </div>
 
         </div>
@@ -114,7 +118,7 @@
 
 
     <div id="blackjackArea" class="hidden">
-        <h3>🂡 블랙잭</h3>
+        <h3>🃏 블랙잭</h3>
 
         <p>플레이어 카드: <span id="playerCards"></span></p>
         <p>딜러 카드: <span id="dealerCards"></span></p>
@@ -123,23 +127,23 @@
         <button id="btnHit">Hit 카드받기</button>
         <button id="btnStand">Stand 멈추기</button>
         <button id="btnRestart">다시하기</button>
-    </div>
-        <div id="rouletteArea" class="hidden">
-  <div id="rouletteArea" class="hidden">
+        </div>
+    <div id="rouletteArea" class="hidden">
   <h3>🎰 슬롯머신 룰렛</h3>
 
-  <p>현재 토큰: <span id="tokenDisplay">0</span></p>
-  <p>(입장료 1000원)</p>
 
-    <div class="slotBox">
-        <span id="slot1" class="slot">0</span>
-        <span id="slot2" class="slot">0</span>
-        <span id="slot3" class="slot">0</span>
+        <p>(입장료 1000원)</p>
+
+        <div class="slotBox">
+            <span id="slot1" class="slot">0</span>
+            <span id="slot2" class="slot">0</span>
+            <span id="slot3" class="slot">0</span>
+        </div>
+
+        <button id="spinButton">🎯 SPIN</button>
+
+        <p>결과: <span id="rouletteResult"></span></p>
     </div>
-
-    <button id="spinButton">🎯 SPIN</button>
-
-    <p>결과: <span id="rouletteResult"></span></p>
     </div>
 
 
@@ -148,41 +152,71 @@
 
 
   <!-- 4. 주식 -->
-  <section id="stock" class="tab-content hidden">
-  <h2>📈 주식 투자</h2>
+    <section id="stock" class="tab-content hidden">
+    <h2>📈 주식 투자</h2>
 
-  <div class="stock-container">
-    <div class="stock-item">
-      <h3>K-Tech ⚡</h3>
-      가격: <span id="price_ktech">0</span>원
+    <div class="stock-container">
+        <div class="stock-item">
+        <h3>K-Tech ⚡</h3>
+        현재가: <span id="price_ktech">0</span>원
+        <button onclick="buyStock('ktech')">매수</button>
+        <button onclick="sellStock('ktech')">매도</button>
+        </div>
+
+        <div class="stock-item">
+        <h3>K-Build 🏗</h3>
+        현재가: <span id="price_kbuild">0</span>원
+        <button onclick="buyStock('kbuild')">매수</button>
+        <button onclick="sellStock('kbuild')">매도</button>
+        </div>
+
+        <div class="stock-item">
+        <h3>K-Bio 🌿</h3>
+        현재가: <span id="price_kbio">0</span>원
+        <button onclick="buyStock('kbio')">매수</button>
+        <button onclick="sellStock('kbio')">매도</button>
+        </div>
     </div>
 
-    <div class="stock-item">
-      <h3>K-Build 🏗</h3>
-      가격: <span id="price_kbuild">0</span>원
+    <!-- 매수/매도 수량 입력 -->
+    <div style="margin-top:10px;">
+        <label>거래 수량: </label>
+        <input type="number" id="stockAmount" value="1" min="1">
     </div>
 
-    <div class="stock-item">
-      <h3>K-Bio 🌿</h3>
-      가격: <span id="price_kbio">0</span>원
-         </div>
-         </div>
+    <!-- 결과/보유현황 -->
+    <h3>📊 보유 현황</h3>
+    <p id="stockHoldings">보유 내역 없음</p>
 
-        <p style="color:#777">가격은 1초마다 변동됩니다</p>
-  </section>
+    <p style="color:#777">가격은 1초마다 변동됩니다</p>
+    </section>
+
 
 
 
   <!-- 5. 통계 -->
-  <section id="stats" class="tab-content hidden">
-    <h2>📊 게임 통계</h2>
+    <section id="stats" class="tab-content hidden">
+    <h2>📊 통계</h2>
 
-    <ul>
-        <li>총 클릭 횟수: <span id="stat_clicks">0</span> 회</li>
-        <li>총 획득한 자산: <span id="stat_totalEarned">0</span> 원</li>
-        <li>자동 수익으로 번 돈: <span id="stat_autoIncomeEarned">0</span> 원</li>
-    </ul>
-  </section>
+    <p>🖱 총 클릭 수: <span id="stat_clicks">0</span></p>
+    <p>💰 총 벌어들인 금액: <span id="stat_totalEarned">0</span></p>
+    <p>⚙ 자동수익으로 얻은 금액: <span id="stat_autoIncomeEarned">0</span></p>
+
+    <hr>
+
+    <h3>📈 투자 통계</h3>
+    <p>매수 금액 합산: <span id="stat_stockBuy">0</span></p>
+    <p>매도 금액 합산: <span id="stat_stockSell">0</span></p>
+    <p>실현 손익: <span id="stat_stockProfit">0</span></p>
+
+    <hr>
+
+    <h3>🎮 미니게임 통계</h3>
+    <p>승리 횟수: <span id="stat_minigameWin">0</span></p>
+    <p>패배 횟수: <span id="stat_minigameLose">0</span></p>
+    </section>
+
+
 
 
 
@@ -193,12 +227,12 @@
     document.getElementById(tabId).classList.remove("hidden");
   }
 </script>
+    <script src="js/stats.js"></script>
     <script src="js/main.js"></script>
     <script src="js/clicker.js"></script>
     <script src="js/shop.js"></script>
     <script src="js/autoIncome.js"></script>
     <script src="js/stocks.js"></script>
-    <script src="js/stats.js"></script>
     <script src="js/minigames/blackjack.js"></script>
     <script src="js/minigames/roulette.js"></script>
     <script src="js/tokenUpgrades.js"></script>
